wp-content/themes/blankslate/scss/modals.scss
.modal__content{
    align-items: center;
    background-color: transparent;
    border: 0;
    width: 100%;
    max-width: 100%;
    margin: 40px 0;
    .btn-close{
        position: absolute;
        width: 24px;
        height: 24px;
        right: 10px;
        top: 8px;
        color: #fff;
        background: none;
        padding: 0;
        z-index: 1;
        opacity: 1;
    }
    form{
        position: relative;
        max-width: 100%;
        width: 100%;
    }
}

.modal-backdrop.show{
    opacity: .7;
}

